--- a/_posts/features/2013-05-18-judge.md
+++ b/_posts/features/2013-05-18-judge.md
@@ -4,10 +4,12 @@ layout: info
 categories: 
   - feature
 order: 4
+title: Please Change me to a the proper Title
 ---
 
 <div style="background:#000;">
 <div class="container">
+![](/media/Cork%20Area_Programme_All-Island%20Transmission%20Map_14September2012-02-02.jpg)
 		<div id="criteria" class="featurette">
 	        <img class="featurette-image pull-right img-rounded" src="{{site.baseurl}}/img/space-invaders.png">
 	        <h2  class="featurette-heading" style="color:#FFF;">Keep in mind... <!--<span class="muted">Ready, Steady, GO!</span>-->
