--- a/_posts/2013-06-10-how-to.md
+++ b/_posts/2013-06-10-how-to.md
@@ -1,14 +1,15 @@
 ---
-published: "true"
+published: true
 layout: info
-title: Website - How To
-
-image: "http://www.dublincity.ie/Pages/Welcome/defaultpagecontent/images/ShortLogo.png"   
-
+title: "Website - How To"
+image: "http://www.dublincity.ie/Pages/Welcome/defaultpagecontent/images/ShortLogo.png"
 ---
+
 ## Space Invaders Website - How To
 
 The editing of the Space Invaders Website can be done through the prose editor at prose.io.
+
+![](/_posts/media/Cork%20Area_Programme_All-Island%20Transmission%20Map_14September2012-02-02-02.jpg)
 
 You should go to prose.io and click the authorize with GitHub link.
 
@@ -65,5 +66,3 @@ All the Best
 Colin
 
 **PS Will update this guide in the coming days to me more explanatory.**
-
-
