renamed iframe md file

--- a/_posts/2013-06-10-how-to.md
+++ b/_posts/2013-06-10-how-to.md
@@ -9,7 +9,7 @@ image: "http://www.dublincity.ie/Pages/Welcome/defaultpagecontent/images/ShortLo
 
 The editing of the Space Invaders Website can be done through the prose editor at prose.io.
 
-![](/_posts/media/Cork%20Area_Programme_All-Island%20Transmission%20Map_14September2012-02-02-02.jpg)
+<img src="/_posts/media/Cork%20Area_Programme_All-Island%20Transmission%20Map_14September2012-02-02-02.jpg" /> 
 
 You should go to prose.io and click the authorize with GitHub link.
 
