--- a/_posts/2013-06-10-how-to.md
+++ b/_posts/2013-06-10-how-to.md
@@ -8,6 +8,7 @@ image: "http://www.dublincity.ie/Pages/Welcome/defaultpagecontent/images/ShortLo
 ## Space Invaders Website - How To
 
 The editing of the Space Invaders Website can be done through the prose editor at prose.io.
+![](//media/IPI-logo.png)
 ![](/_posts/media/dublin_bus_gis_trace_e64410.png)
 
 <img src="/_posts/media/Cork%20Area_Programme_All-Island%20Transmission%20Map_14September2012-02-02-02.jpg" /> 
