--- a/_posts/info/2013-06-06-colin.md
+++ b/_posts/info/2013-06-06-colin.md
@@ -7,6 +7,7 @@ categories:
 image: "http://www.dublincity.ie/Pages/Welcome/defaultpagecontent/images/ShortLogo.png"
 ---
 
+![IPI-logo.png](/_posts/info/IPI-logo.png)
 ## A New Post
 
 Enter text in ![Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
