--- a/_posts/2013-06-10-how-to.md
+++ b/_posts/2013-06-10-how-to.md
@@ -5,6 +5,7 @@ title: "Website - How To"
 image: "http://www.dublincity.ie/Pages/Welcome/defaultpagecontent/images/ShortLogo.png"
 ---
 
+![IPI-logo.png](/_posts/IPI-logo.png)
 ## Space Invaders Website - How To
 
 The editing of the Space Invaders Website can be done through the prose editor at prose.io.
