updated to rdiscount etc

--- a/_posts/info/2013-06-06-colin.md
+++ b/_posts/info/2013-06-06-colin.md
@@ -7,9 +7,10 @@ categories:
 image: "http://www.dublincity.ie/Pages/Welcome/defaultpagecontent/images/ShortLogo.png"
 ---
 
-![IPI-logo.png](/_posts/info/IPI-logo.png)
+![IPI](/_posts/info/IPI-logo.png)
 ## A New Post
-![Screen shot 2013-08-09 at 15.41.14.png](/media/Screen shot 2013-08-09 at 15.41.14.png)
+
+![Blah](.././media/Screen shot 2013-08-09 at 15.41.14.png)
 
 
 Enter text in ![Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
