--- a/_posts/features/2013-05-18-judge.md
+++ b/_posts/features/2013-05-18-judge.md
@@ -11,7 +11,7 @@ title: Please Change me to a the proper Title
 <div class="container">
 ![](/media/Cork%20Area_Programme_All-Island%20Transmission%20Map_14September2012-02-02.jpg)
 		<div id="criteria" class="featurette">
-	        <img class="featurette-image pull-right img-rounded" src="{{site.baseurl}}/media/spacecomp.jpg">
+	        <img class="featurette-image pull-right img-rounded" src="{{site.baseurl}}/media/spacelogolarge.jpg">
 	        <h2  class="featurette-heading" style="color:#FFF;">Keep in mind... <!--<span class="muted">Ready, Steady, GO!</span>-->
           </h2>
           <p class="lead" style="color:#999;"> Your project will be assessed against a selection of principles from the Urban Design Manual as outlined below:
