--- a/_posts/features/2013-05-20-fight.md
+++ b/_posts/features/2013-05-20-fight.md
@@ -4,13 +4,14 @@ layout: info
 categories: 
   - feature
 order: 2
+title: Please Change me to a the proper Title
 ---
 
 <div class="black" style="">
 	<hr class="featurette-divider">
 	<div  class="container">
 		<div id="fight"  class="featurette">
-	        <img class="featurette-image pull-left img-rounded" src="{{site.baseurl}}/img/space-invaders-game.jpg">
+	        <img class="featurette-image pull-left img-rounded" src="{{site.baseurl}}/media/spacelogolarge.jpg">
 	        <h2 class="featurette-heading" style="color:#FFF;">The Competition.</h2>
           <p class="lead" style="color:#999;">You are invited to compete against other planning schools in teams of 2 - 4 planning students/graduates to redevelop the Thomas Street site. Teams will be given the opportunity to present their plans for the site to a diverse and select jury. The winners will receive a cash prize along with a trophy for their University. Their projects will be on display in Dublin City Council to inspire the owners of the site, Digital Hub.</p>
 	      </div>	
