--- a/_posts/features/2013-08-20-comp-pic.md
+++ b/_posts/features/2013-08-20-comp-pic.md
@@ -4,6 +4,7 @@ title: comp pic
 layout: info
 ---
 
+![]({{site.baseurl}}/media/Screen%20shot%202013-08-28%20at%2011.44.42.png)
 ![](/media/spacecomp.jpg)## A New Post
 
 Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
