--- a/_posts/features/2013-05-18-judge.md
+++ b/_posts/features/2013-05-18-judge.md
@@ -7,8 +7,8 @@ order: 4
 title: Please Change me to a the proper Title
 ---
 
-<div style="background:#000;">
-<div class="container">
+<div class="black" >
+<div class="container" style="margin-top:60px;">
 		<div id="criteria" class="featurette">
 	        <img class="featurette-image pull-right img-rounded" src="{{site.baseurl}}/media/spacelogolarge.jpg">
 	        <h2  class="featurette-heading" style="color:#FFF;">Keep in mind... <!--<span class="muted">Ready, Steady, GO!</span>-->
