--- a/_posts/features/2013-08-20-comp-pic.md
+++ b/_posts/features/2013-08-20-comp-pic.md
@@ -4,7 +4,8 @@ title: comp pic
 layout: info
 ---
 
-![]({{site.baseurl}}![Screen shot 2013-08-28 at 11.44.42.png](/media/Screen shot 2013-08-28 at 11.44.42.png)
+![]({{site.baseurl}}[Screen shot 2013-08-28 at 11.44.42.png](/media/Screen shot 2013-08-28 at 11.44.42.png)
 ![](/media/spacecomp.jpg)## A New Post
 
 Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+![941762_10151563606409620_657210009_n.jpg](/media/941762_10151563606409620_657210009_n.jpg)
