--- a/_posts/features/2013-08-20-comp-pic.md
+++ b/_posts/features/2013-08-20-comp-pic.md
@@ -9,3 +9,5 @@ layout: info
 
 Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
 ![941762_10151563606409620_657210009_n.jpg](/media/941762_10151563606409620_657210009_n.jpg)
+
+![spacelargelogo.jpg](/media/spacelargelogo.jpg)
