updated sponsors to include ipi logo and renamed sponsor us page

--- a/_posts/features/2013-05-16-sponsors.md
+++ b/_posts/features/2013-05-16-sponsors.md
@@ -14,6 +14,7 @@ title: Please Change me to a the proper Title
 		  <h2  class="featurette-heading" style="color:#FFF;">Thank you, <span class="muted">to our lovely sponsors!</span></h2>
 		  	<img class="featurette-image-spons img-rounded" src="http://www.dublincity.ie/Pages/Welcome/defaultpagecontent/images/ShortLogo.png" style="max-height:250px;">
 			<img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/img/arc_logo.png" style="max-height:140px;">
+			<img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/img/ipi-logo.png" style="height:140px;">
 			<img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/img/rtpi_irl.png" style="max-height:100px;">
 			
 			<p class="lead" style="color:#999;">Space Invaders 2013 would be nothing without the generous support of the sponsors shown here. Thank you all for your financial support, providing the venue and donating your time to making Space Invaders 2013 a reality.</p>
