--- a/_posts/features/2013-05-16-sponsors.md
+++ b/_posts/features/2013-05-16-sponsors.md
@@ -18,7 +18,7 @@ title: Please Change me to a the proper Title
 			<img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/img/rtpi_irl.png" style="max-height:100px;">
 			
 			<p class="lead" style="color:#999;">Space Invaders 2013 would be nothing without the generous support of the sponsors shown here. Thank you all for your financial support, providing the venue and donating your time to making Space Invaders 2013 a reality.</p>
-			<h2  class="featurette-heading" style="color:#FFF;"><span class="muted">Organised By</span></h2>
+			<h2  class="featurette-heading" style="color:#FFF;"><span class="muted">Organgised By</span></h2>
           <p class="lead" style="color:#999;">Sybil Berne RTPI, Caroline O'Farrell RTPI, James White IPI, Colin Broderick IPI and Ed Barrett YPN.</p>
           <!--<img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/img/rtpi_irl.png" style="height:50px;">
           <img class="featurette-image-spons img-rounded" src="http://www.d1035517-1.cp.blacknight.com/wp-content/uploads/2011/08/YPN_logo_wp2.jpg" style="height:50px;">
