--- a/_posts/info/2013-06-06-colin.md
+++ b/_posts/info/2013-06-06-colin.md
@@ -7,6 +7,11 @@ categories:
 image: "http://www.dublincity.ie/Pages/Welcome/defaultpagecontent/images/ShortLogo.png"
 ---
 
+
+<div id="fb-root"></div> <script>(function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1"; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk'));</script>
+<div class="fb-post" data-href="https://www.facebook.com/spaceinvadersdublin2013/posts/507509859331447"><div class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/spaceinvadersdublin2013/posts/507509859331447">Post</a> by <a href="https://www.facebook.com/spaceinvadersdublin2013">Space Invaders - Dublin 2013</a>.</div></div>
+
+
 ![IPI](/_posts/info/IPI-logo.png)
 ## A New Post
 
