--- a/_posts/features/2013-05-16-sponsors.md
+++ b/_posts/features/2013-05-16-sponsors.md
@@ -16,6 +16,8 @@ title: Please Change me to a the proper Title
 			<img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/img/arc_logo.png" style="max-height:140px;">
 			<img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/img/ipi-logo.png" style="height:140px;">
 			<img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/img/rtpi_irl.png" style="max-height:100px;">
+            ![masterplan.png](/media/masterplan.png)
+
 			
 			<p class="lead" style="color:#999;">Space Invaders 2013 would be nothing without the generous support of the sponsors shown here. Thank you all for your financial support, providing the venue and donating your time to making Space Invaders 2013 a reality.</p>
 			<h2  class="featurette-heading" style="color:#FFF;"><span class="muted">Organised By</span></h2>
