added digital hub logo

--- a/_posts/features/2013-05-16-sponsors.md
+++ b/_posts/features/2013-05-16-sponsors.md
@@ -13,11 +13,14 @@ title: Please Change me to a the proper Title
 		<div id="sponsors" class="featurette">
 		  <h2  class="featurette-heading" style="color:#FFF;">Thank you, <span class="muted">to our lovely sponsors!</span></h2>
 		  	<img class="featurette-image-spons img-rounded" src="http://www.dublincity.ie/Pages/Welcome/defaultpagecontent/images/ShortLogo.png" style="max-height:250px;">
+			<img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/img/dig_hub.png" style="max-height:140px;">
 			<img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/img/arc_logo.png" style="max-height:140px;">
 			<img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/img/ipi-logo.png" style="height:140px;">
-			<img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/img/rtpi_irl.png" style="max-height:100px;">
+			<img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/img/rtpi_irl.png" style="max-height:200px;">
+			
             <img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/media/masterplan.png" style="max-height:60px;">
             <img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/media/bma-planning.png" style="max-height:100px;">
+			
 
 
 			
