--- a/_posts/features/2013-05-17-register.md
+++ b/_posts/features/2013-05-17-register.md
@@ -9,9 +9,10 @@ order: 5
 <div class="container">
 	<div id="register" class="featurette">
       
-      <div class="span5" style="border:10px solid #CCC; padding:20px;margin-right:40px;"><iframe height="948" allowTransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none"  src="http://cbroderick.wufoo.com/embed/m7x3s5/"><a href="http://cbroderick.wufoo.com/forms/m7x3s5/">Fill out my Wufoo form!</a></iframe></div>
+      <!--<div class="span5" style="border:10px solid #CCC; padding:20px;margin-right:40px;"><iframe height="948" allowTransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none"  src="http://cbroderick.wufoo.com/embed/m7x3s5/"><a href="http://cbroderick.wufoo.com/forms/m7x3s5/">Fill out my Wufoo form!</a></iframe></div>-->
+		
         
-        <h2  class="featurette-heading">Register Now.</h2>
-      <p class="lead" style="color:#999;">To be in with a chance to win the prize, you will need to form a team of 2 to 4 people and be a current planning student or a graduate from 2011 onwards. No more than two teams from each planning school will be eligible to enter so register early to be part of the first Space Invaders Competition.</p>
+        <h2  class="featurette-heading">Registeration Closed.</h2>
+      <p class="lead" style="color:#999;">Questions please to <a href="https://www.facebook.com/spaceinvadersdublin2013">facebook.com/spaceinvadersdublin2013 or <strong>spaceinvaders@dublin.com</strong></p>
       </div>	
 </div>
