--- a/_posts/features/2013-05-16-sponsors.md
+++ b/_posts/features/2013-05-16-sponsors.md
@@ -20,6 +20,7 @@ title: Please Change me to a the proper Title
 			
             <img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/media/masterplan.png" style="max-height:60px;">
             <img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/media/bma-planning.png" style="max-height:100px;">
+            <img class="featurette-image-spons img-rounded" src="http://www.downeyplanning.ie/img/downey/logo_smalll_white.png" style="max-height:100px;">
 			
 
 
